syntax = "proto3";

package ticket;

option go_package="github.com/tehrelt/moi-uslugi/proto/ticket;ticketpb";

service TicketService {
    rpc CreateAccountTicket(NewTicketAccount) returns (CreateResponse);
    rpc CreateConnectServiceTicket(NewTicketConnectService) returns (CreateResponse);
    rpc Find(FindRequest) returns (FindResponse);
    rpc List(ListRequest) returns (stream Ticket);
    rpc UpdateTicketStatus(UpdateTicketStatusRequest) returns (UpdateTicketStatusResponse);
}

enum TicketStatus {
    TicketStatusUnknown = 0;
    TicketStatusPending = 1;
    TicketStatusRejected = 2;
    TicketStatusApproved = 3;
}

enum TicketType {
    TicketTypeUnknown = 0;
    TicketTypeAccount = 1;
    TicketTypeConnectService = 2;
}

message TicketHeader {
    string id = 1;
    TicketType type = 2;
    TicketStatus status = 3;
    string created_by = 4;
}

message NewTicketAccount {
    string created_by = 1;
    string house_adress = 2;
}

message TicketAccount {
    string house_adress = 2;
}

message NewTicketConnectService {
    string created_by = 1;
    string account_id = 2;
    string service_id = 3;
}

message TicketConnectService {
    string account_id = 1;
    string service_id = 2;
}

message Ticket {
    TicketHeader header = 1;
    oneof payload {
        TicketAccount account = 2;
        TicketConnectService connect_service = 3;
    }
}


message CreateResponse {
    string id = 1;
}

message Range {
    int64 min = 1;
    int64 max = 2;
}

message ListRequest {
    Range range = 1;
    string user_id = 2;
    string account_id = 3;
    TicketType type = 4;
    TicketStatus status = 5;
}

message FindRequest {
    string id = 1;
}

message FindResponse {
    Ticket ticket = 1;
}

message UpdateTicketStatusRequest {
    string id = 1;
    TicketStatus status = 2;
}

message UpdateTicketStatusResponse {
    string id = 1;
}
